kubernetes/apps/falco-operator/falco-operator/networkpolicys/falco-operator/falco-operator-falco-operator-allow-eg-to-k8s-api.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: falco-operator-falco-operator-allow-eg-to-k8s-api
  namespace: falco-operator
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: falco-operator
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
